--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/node_modules/slick-carousel/slick/slick.css" />
+<link rel="stylesheet" href="/node_modules/slick-carousel/slick/slick-theme.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dreamy Destiny</title>
   </head>
